Examples/fail/unexpected-field-01.stella
language core;

fn main() -> Bool {
    return {a = true, b = 1}.c
} 
